--- a/JAXB/.project
+++ b/JAXB/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Basico</name>
+	<name>JAXB</name>
 	<comment></comment>
 	<projects>
 	</projects>
